# Keypoint-Learning

./: CMakeLists.txt  README.md
cmake/GenerateTrainingSet/: CMakeLists.txt
cmake/TestDetector/: CMakeLists.txt
cmake/TrainDetector/: CMakeLists.txt
data/: example_groundTruth.txt  example_overlappingAreas.txt
data/point_cloud_test/: cheff000.pcd  cheff001.pcd  cheff002.pcd
include/: KeypointLearning.h  general_utilities.h  overlap_finder.h  point_cloud_utilities.h  trainingset_generator.h  view.h  view_manager.h
include/impl/: KeypointLearning.hpp  general_utilities.hpp  point_cloud_utilities.hpp  trainingset_generator.hpp  view_manager.hpp
src/: KeypointLearning.cpp  general_utilities.cpp  main_generate_training_set.cpp  main_test_detector.cpp  main_train_detector.cpp  overlap_finder.cpp  test.cpp  view_manager.cpp
